--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitvcs (0.15.3-1) unstable; urgency=low
+
+  * New upstream release 0.15.3
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 05 May 2013 19:28:42 +0800
+
 rabbitvcs (0.15.2-1) unstable; urgency=low
 
   * New upstream release 0.15.2
