--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,35 @@
-rabbitvcs (0.15.3-3~raring) raring; urgency=low
-
-  * Correcting accidental upload of incorrectly built package
-
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 16 Jun 2013 10:22:52 +0800
-
-rabbitvcs (0.15.3-2~raring) raring; urgency=low
+rabbitvcs (0.15.3-2~quantal) quantal; urgency=low
 
   * Fixed thunarx-python script installation
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sat, 15 Jun 2013 12:09:05 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sat, 15 Jun 2013 12:01:31 +0800
 
-rabbitvcs (0.15.3-1~raring) raring; urgency=low
+rabbitvcs (0.15.3-1~quantal) quantal; urgency=low
 
   * New upstream release 0.15.3
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 05 May 2013 20:15:50 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 05 May 2013 18:13:24 +0800
+
+rabbitvcs (0.15.2-1~quantal) quantal; urgency=low
+
+  * New upstream release 0.15.2
+  * Issue 187: Drop-down list of pre-defined properties in the property dialog
+  * Issue 261: RabbitVCS incompatible with TortoiseHg
+  * Issue 562: 'Refresh Status' does not work
+  * Issue 585: Fix "Browser can not handle path with non-English name"
+  * Issue 586: Fixed "Browser can not handle path with non-English name"
+  * Issue 564: Debian: Version of python-svn in Depends: is too low
+  * Issue 579: Ask for dulwich 0.6.1+
+  * Issue 605: Log window Forward button does not work for me
+  * Issue 628: (Sub)directories with a white space are not correctly managed
+  * Issue 716: Unicode regression from (Sub)directories with a white space are not correctly managed
+  * Fixed commit ID not being reported when committing to a git repository.
+  * Updated packaging for Ubuntu and Debian. Added packaging for Quantal Quetzal (12.10) Ubuntu release.
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 16 Sep 2012 16:46:59 +0800
+
+rabbitvcs (0.15.1-1~quantal) quantal; urgency=low
+
+  * New upstream release (multiple bugfixes)
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 26 Aug 2012 10:06:23 +0800
