--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,10 @@
-rabbitvcs (0.15.3-2~oneiric) oneiric; urgency=low
-
-  * Fixed thunarx-python script placement
-
- -- Jason Heeris <jason.heeris@gmail.com>  Sat, 15 Jun 2013 11:24:27 +0800
-
-rabbitvcs (0.15.3-1~oneiric) oneiric; urgency=low
+rabbitvcs (0.15.3-1~natty) natty; urgency=low
 
   * New upstream release 0.15.3
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 05 May 2013 18:50:29 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 05 May 2013 18:54:50 +0800
 
-rabbitvcs (0.15.2-1~oneiric) oneiric; urgency=low
+rabbitvcs (0.15.2-1~natty) natty; urgency=low
 
   * New upstream release 0.15.2
   * Issue 187: Drop-down list of pre-defined properties in the property dialog
@@ -26,40 +20,48 @@ rabbitvcs (0.15.2-1~oneiric) oneiric; urgency=low
   * Fixed commit ID not being reported when committing to a git repository.
   * Updated packaging for Ubuntu and Debian. Added packaging for Quantal Quetzal (12.10) Ubuntu release.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 16 Sep 2012 16:40:59 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 16 Sep 2012 16:39:59 +0800
 
-rabbitvcs (0.15.1-1~oneiric) oneiric; urgency=low
+rabbitvcs (0.15.1-1~natty) natty; urgency=low
 
   * New upstream release (multiple bugfixes)
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 26 Aug 2012 10:06:01 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 26 Aug 2012 10:05:50 +0800
 
-rabbitvcs (0.15.0.5-1~oneiric) oneiric; urgency=low
+rabbitvcs (0.15.0.5-1~natty) natty; urgency=low
 
   * New upstream release fixing gtkspell integration issue
 
- -- Jason Heeris <jason.heeris@gmail.com>  Thu, 10 Nov 2011 07:21:56 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Thu, 10 Nov 2011 07:21:22 +0800
 
-rabbitvcs (0.15.0.3-1~oneiric) oneiric; urgency=low
+rabbitvcs (0.15.0.3-1~natty) natty; urgency=low
 
   * New upstream point release: fixes missing data files.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Wed, 09 Nov 2011 23:43:02 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Wed, 09 Nov 2011 23:42:36 +0800
 
-rabbitvcs (0.15.0.1-3~oneiric) oneiric; urgency=low
+rabbitvcs (0.15.0.1-3~natty) natty; urgency=low
 
   * Fixed client installation
 
- -- Jason Heeris <jason.heeris@gmail.com>  Tue, 08 Nov 2011 08:21:45 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Tue, 08 Nov 2011 08:19:03 +0800
 
-rabbitvcs (0.15.0.1-2~oneiric) oneiric; urgency=low
+rabbitvcs (0.15.0.1-2~natty) natty; urgency=low
 
-  * Fixed epoch numbering in dependency
+  * Fixed epoch numbers in release
 
- -- Jason Heeris <jason.heeris@gmail.com>  Mon, 07 Nov 2011 23:50:35 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Tue, 08 Nov 2011 08:05:51 +0800
 
-rabbitvcs (0.15.0.1-1~oneiric~test1) oneiric; urgency=low
+rabbitvcs (0.15.0.1-1~natty) natty; urgency=low
 
-  * Initial packaging for Oneiric
+  * New upstream release
+  * New client for Nautilus 3
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 06 Nov 2011 20:15:57 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 06 Nov 2011 19:59:03 +0800
+
+rabbitvcs (0.14.2.1-2~natty) natty; urgency=low
+
+  * First packaging for Natty.
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Wed, 15 Jun 2011 09:29:06 +0800
+
