--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-rabbitvcs (0.15.3-1~maverick) maverick; urgency=low
+rabbitvcs (0.15.3-1~lucid) lucid; urgency=low
 
   * New upstream release 0.15.3
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 05 May 2013 19:03:13 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 05 May 2013 19:07:51 +0800
 
-rabbitvcs (0.15.2-1~maverick) maverick; urgency=low
+rabbitvcs (0.15.2-1~lucid) lucid; urgency=low
 
   * New upstream release 0.15.2
   * Issue 187: Drop-down list of pre-defined properties in the property dialog
@@ -20,77 +20,90 @@ rabbitvcs (0.15.2-1~maverick) maverick; urgency=low
   * Fixed commit ID not being reported when committing to a git repository.
   * Updated packaging for Ubuntu and Debian. Added packaging for Quantal Quetzal (12.10) Ubuntu release.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 16 Sep 2012 16:36:04 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 16 Sep 2012 16:06:52 +0800
 
-rabbitvcs (0.15.1-1~maverick) maverick; urgency=low
+rabbitvcs (0.15.1-1~lucid) lucid; urgency=low
 
   * New upstream release (multiple bugfixes)
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 26 Aug 2012 10:05:03 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 26 Aug 2012 10:01:25 +0800
 
-rabbitvcs (0.15.0.5-1~maverick) maverick; urgency=low
+rabbitvcs (0.15.0.5-1~lucid) lucid; urgency=low
 
   * New upstream release fixing gtkspell integration issue
 
- -- Jason Heeris <jason.heeris@gmail.com>  Thu, 10 Nov 2011 07:20:52 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Thu, 10 Nov 2011 07:20:11 +0800
 
-rabbitvcs (0.15.0.3-1~maverick) maverick; urgency=low
+rabbitvcs (0.15.0.3-1~lucid) lucid; urgency=low
 
   * New upstream point release: fixes missing data files.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Wed, 09 Nov 2011 23:42:16 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Wed, 09 Nov 2011 23:41:53 +0800
 
-rabbitvcs (0.15.0.1-3~maverick) maverick; urgency=low
+rabbitvcs (0.15.0.1-3~lucid) lucid; urgency=low
 
   * Fixed client installation
 
- -- Jason Heeris <jason.heeris@gmail.com>  Tue, 08 Nov 2011 08:13:30 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Tue, 08 Nov 2011 08:12:10 +0800
 
-rabbitvcs (0.15.0.1-2~maverick) maverick; urgency=low
+rabbitvcs (0.15.0.1-2~lucid) lucid; urgency=low
 
-  * Fixed epoch numbering in dependency
+  * Fixed epoch numbering
 
- -- Jason Heeris <jason.heeris@gmail.com>  Mon, 07 Nov 2011 23:39:17 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Mon, 07 Nov 2011 23:34:05 +0800
 
-rabbitvcs (0.15.0.1-1~maverick) maverick; urgency=low
+rabbitvcs (0.15.0.1-1~lucid) lucid; urgency=low
 
   * New upstream release
-  * New client for Nautilus 3
+  * Includes new Nautilus 3 client
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 06 Nov 2011 19:53:35 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 06 Nov 2011 15:57:06 +0800
 
-rabbitvcs (0.14.2.1-2~maverick) maverick; urgency=low
-
-  * God I hate you Launchpad.
-
- -- Jason Heeris <jason.heeris@gmail.com>  Wed, 15 Jun 2011 10:50:07 +0800
-
-rabbitvcs (0.14.2.1-1~maverick) maverick; urgency=low
+rabbitvcs (0.14.2.1-1~lucid) lucid; urgency=low
 
   * New upstream release
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sat, 19 Feb 2011 01:39:07 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sat, 19 Feb 2011 01:34:28 +0800
 
-rabbitvcs (0.14.1.1-1~maverick) maverick; urgency=low
+rabbitvcs (0.14.1.1-1~lucid) lucid; urgency=low
 
   * New upstream release.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sun, 09 Jan 2011 17:38:04 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 09 Jan 2011 17:36:12 +0800
 
-rabbitvcs (0.14~beta4-1~maverick) maverick; urgency=low
+rabbitvcs (0.14~beta4-1~lucid) lucid; urgency=low
 
   * New upstream beta release.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Wed, 15 Dec 2010 23:42:27 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Wed, 15 Dec 2010 23:40:46 +0800
 
-rabbitvcs (0.13.3-1~maverick) maverick; urgency=low
+rabbitvcs (0.13.3-1~lucid) lucid; urgency=low
 
-  * New point release.
+  * New upstream release.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Wed, 16 Jun 2010 21:26:14 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Wed, 16 Jun 2010 21:27:01 +0800
 
-rabbitvcs (0.13.2.1-1~maverick) maverick; urgency=low
+rabbitvcs (0.13.2.1-1~lucid) lucid; urgency=low
 
-  * First release for Maverick!
+  * Point-point bugfix release.
 
- -- Jason Heeris <jason.heeris@gmail.com>  Sat, 05 Jun 2010 15:40:42 +0800
+ -- Jason Heeris <jason.heeris@gmail.com>  Sat, 05 Jun 2010 15:38:12 +0800
+
+rabbitvcs (0.13.2+a-1~lucid) lucid; urgency=low
+
+  * Sigh.
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Mon, 31 May 2010 23:17:05 +0800
+
+rabbitvcs (0.13.2-1~lucid) lucid; urgency=low
+
+  * New upstream release.
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 30 May 2010 23:59:33 +0800
+
+rabbitvcs (0.13.1-1~lucid) lucid; urgency=low
+
+  * Replaced multiple tarballs with single tarball plus split-out binary
+    packages.
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Fri, 02 Apr 2010 17:03:15 +0800
