--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitvcs (0.16-1~maverick) maverick; urgency=medium
+
+  * New upstream release
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 23 Feb 2014 16:41:28 +0800
+
 rabbitvcs (0.15.3-1~maverick) maverick; urgency=low
 
   * New upstream release 0.15.3
