--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitvcs (0.16-1~precise) precise; urgency=medium
+
+  * New upstream release
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 23 Feb 2014 16:46:53 +0800
+
 rabbitvcs (0.15.3-2~precise) precise; urgency=low
 
   * Fixed thunarx-python script installation
