--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitvcs (0.16-1~raring) raring; urgency=medium
+
+  * New upstream release
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 23 Feb 2014 16:51:52 +0800
+
 rabbitvcs (0.15.3-3~raring) raring; urgency=low
 
   * Correcting accidental upload of incorrectly built package
