--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rabbitvcs (0.16-1~saucy) saucy; urgency=medium
+
+  * New upstream release
+
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 23 Feb 2014 16:52:38 +0800
+
 rabbitvcs (0.15.3-1~saucy) saucy; urgency=low
 
   * Packaging for Ubuntu 13.10 (Saucy)
