--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-rabbitvcs (0.15.3-1~saucy) saucy; urgency=low
+rabbitvcs (0.16-1~trusty) trusty; urgency=medium
 
-  * Packaging for Ubuntu 13.10 (Saucy)
+  * New upstream release
 
- -- Jason Heeris <jason.heeris@gmail.com>  Mon, 02 Dec 2013 11:32:52 +0800
-
+ -- Jason Heeris <jason.heeris@gmail.com>  Sun, 23 Feb 2014 16:53:05 +0800
