Fixed error in changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rabbitvcs (0.16-1~oneiric) UNRELEASED; urgency=medium
+rabbitvcs (0.16-1~oneiric) oneiric; urgency=medium
 
   * New upstream release
 
